Fix z-index of create-video form on videos page

--- a/app/src/component/style/CreateItem.scss
+++ b/app/src/component/style/CreateItem.scss
@@ -3,6 +3,7 @@
 
 .CreateItem-form-container {
 	background: rgba(0, 0, 0, 0.5);
+	z-index: 100;
 	position: fixed;
 	top: 0;
 	left: 0;
